--- a/css/problems_style.css
+++ b/css/problems_style.css
@@ -50,3 +50,16 @@
     margin: 0px;
     font-size: 25px;
 }
+.link_block_normal{
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 588px;
+    height: 353px;
+}
+.link_block_hover{
+    position: absolute;
+    width: 588px;
+    height: 353px;
+    background-color: rgba(255, 255, 255, 0.5);
+}
