--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,10 @@
     color: inherit;
     text-decoration: none;
 }
+.link_style {
+  color: inherit;
+  text-decoration: none;
+}
 .header_li {
   width: 177px;
   height: 73px;
